--- a/utils/subset-analysis.ipynb
+++ b/utils/subset-analysis.ipynb
@@ -22,14 +22,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def analyse_subsets(folder):\n",
     "    subsets=[]\n",
     "    idx=[]\n",
-    "    idx.extend(list(range(0, 150000, 15000)))\n",
+    "    idx.extend(list(range(0, 250000, 25000)))\n",
     "    for i in idx:\n",
     "        subsets.append(set(torch.load(folder+f\"subset_indices_after_step_{i}.pt\").tolist()))\n",
     "    df=pd.DataFrame()\n",
@@ -65,14 +65,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "55it [00:28,  1.90it/s]                        "
+      "55it [06:18,  6.81s/it]                        "
      ]
     },
     {
@@ -80,16 +80,16 @@
      "output_type": "stream",
      "text": [
       "Union\n",
-      "[6231513, 11532182, 15674528, 18948045, 21571716, 23677569, 25355311, 26706041, 27806114, 28723507]\n",
+      "[10390000, 17169868, 21808375, 25085562, 27471706, 29250064, 30604979, 31661100, 32500331, 33179912]\n",
       "Intersection\n",
-      "[6231513, 934331, 203945, 58753, 20652, 8653, 4184, 2136, 1199, 750]\n"
+      "[10390000, 3610132, 1472699, 689702, 368965, 222294, 147830, 105687, 79518, 62336]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "55it [00:55,  1.00s/it]\n"
+      "55it [10:11, 11.12s/it]\n"
      ]
     },
     {
@@ -114,15 +114,15 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>0</th>\n",
-       "      <th>15000</th>\n",
-       "      <th>30000</th>\n",
-       "      <th>45000</th>\n",
-       "      <th>60000</th>\n",
+       "      <th>25000</th>\n",
+       "      <th>50000</th>\n",
        "      <th>75000</th>\n",
-       "      <th>90000</th>\n",
-       "      <th>105000</th>\n",
-       "      <th>120000</th>\n",
-       "      <th>135000</th>\n",
+       "      <th>100000</th>\n",
+       "      <th>125000</th>\n",
+       "      <th>150000</th>\n",
+       "      <th>175000</th>\n",
+       "      <th>200000</th>\n",
+       "      <th>225000</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>subsets</th>\n",
@@ -141,7 +141,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>6231513</td>\n",
+       "      <td>10390000</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -153,9 +153,9 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15000</th>\n",
-       "      <td>934331</td>\n",
-       "      <td>6235000</td>\n",
+       "      <th>25000</th>\n",
+       "      <td>3610132</td>\n",
+       "      <td>10390000</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -166,38 +166,12 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>30000</th>\n",
-       "      <td>934635</td>\n",
-       "      <td>1361964</td>\n",
-       "      <td>6235000</td>\n",
+       "      <th>50000</th>\n",
+       "      <td>3611833</td>\n",
+       "      <td>3612359</td>\n",
+       "      <td>10390000</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>45000</th>\n",
-       "      <td>934136</td>\n",
-       "      <td>1334672</td>\n",
-       "      <td>1443076</td>\n",
-       "      <td>6235000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>60000</th>\n",
-       "      <td>935738</td>\n",
-       "      <td>1319284</td>\n",
-       "      <td>1422122</td>\n",
-       "      <td>1482332</td>\n",
-       "      <td>6235000</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -206,138 +180,164 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75000</th>\n",
-       "      <td>935938</td>\n",
-       "      <td>1309886</td>\n",
-       "      <td>1411327</td>\n",
-       "      <td>1482691</td>\n",
-       "      <td>1557590</td>\n",
-       "      <td>6235000</td>\n",
+       "      <td>3612357</td>\n",
+       "      <td>3614205</td>\n",
+       "      <td>3614788</td>\n",
+       "      <td>10390000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100000</th>\n",
+       "      <td>3611305</td>\n",
+       "      <td>3612124</td>\n",
+       "      <td>3613877</td>\n",
+       "      <td>3612142</td>\n",
+       "      <td>10390000</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>90000</th>\n",
-       "      <td>935435</td>\n",
-       "      <td>1301764</td>\n",
-       "      <td>1393776</td>\n",
-       "      <td>1470041</td>\n",
-       "      <td>1563114</td>\n",
-       "      <td>1694687</td>\n",
-       "      <td>6235000</td>\n",
+       "      <th>125000</th>\n",
+       "      <td>3610229</td>\n",
+       "      <td>3613180</td>\n",
+       "      <td>3614462</td>\n",
+       "      <td>3612966</td>\n",
+       "      <td>3612012</td>\n",
+       "      <td>10390000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>150000</th>\n",
+       "      <td>3611754</td>\n",
+       "      <td>3611665</td>\n",
+       "      <td>3613436</td>\n",
+       "      <td>3614450</td>\n",
+       "      <td>3612829</td>\n",
+       "      <td>3612276</td>\n",
+       "      <td>10390000</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>105000</th>\n",
-       "      <td>935964</td>\n",
-       "      <td>1289562</td>\n",
-       "      <td>1374615</td>\n",
-       "      <td>1454871</td>\n",
-       "      <td>1553665</td>\n",
-       "      <td>1705299</td>\n",
-       "      <td>1776576</td>\n",
-       "      <td>6235000</td>\n",
+       "      <th>175000</th>\n",
+       "      <td>3612816</td>\n",
+       "      <td>3612504</td>\n",
+       "      <td>3614904</td>\n",
+       "      <td>3613760</td>\n",
+       "      <td>3612312</td>\n",
+       "      <td>3612053</td>\n",
+       "      <td>3611909</td>\n",
+       "      <td>10390000</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>120000</th>\n",
-       "      <td>935214</td>\n",
-       "      <td>1285137</td>\n",
-       "      <td>1373694</td>\n",
-       "      <td>1449043</td>\n",
-       "      <td>1549421</td>\n",
-       "      <td>1705556</td>\n",
-       "      <td>1780921</td>\n",
-       "      <td>1834384</td>\n",
-       "      <td>6235000</td>\n",
+       "      <th>200000</th>\n",
+       "      <td>3610674</td>\n",
+       "      <td>3611587</td>\n",
+       "      <td>3614444</td>\n",
+       "      <td>3613300</td>\n",
+       "      <td>3613230</td>\n",
+       "      <td>3613403</td>\n",
+       "      <td>3613491</td>\n",
+       "      <td>3611777</td>\n",
+       "      <td>10390000</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>135000</th>\n",
-       "      <td>936262</td>\n",
-       "      <td>1278971</td>\n",
-       "      <td>1367864</td>\n",
-       "      <td>1444679</td>\n",
-       "      <td>1543711</td>\n",
-       "      <td>1703373</td>\n",
-       "      <td>1780215</td>\n",
-       "      <td>1835966</td>\n",
-       "      <td>1860195</td>\n",
-       "      <td>6235000</td>\n",
+       "      <th>225000</th>\n",
+       "      <td>3613278</td>\n",
+       "      <td>3613972</td>\n",
+       "      <td>3612920</td>\n",
+       "      <td>3612784</td>\n",
+       "      <td>3615772</td>\n",
+       "      <td>3613176</td>\n",
+       "      <td>3615302</td>\n",
+       "      <td>3613566</td>\n",
+       "      <td>3613592</td>\n",
+       "      <td>10390000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>union</th>\n",
-       "      <td>6231513</td>\n",
-       "      <td>11532182</td>\n",
-       "      <td>15674528</td>\n",
-       "      <td>18948045</td>\n",
-       "      <td>21571716</td>\n",
-       "      <td>23677569</td>\n",
-       "      <td>25355311</td>\n",
-       "      <td>26706041</td>\n",
-       "      <td>27806114</td>\n",
-       "      <td>28723507</td>\n",
+       "      <td>10390000</td>\n",
+       "      <td>17169868</td>\n",
+       "      <td>21808375</td>\n",
+       "      <td>25085562</td>\n",
+       "      <td>27471706</td>\n",
+       "      <td>29250064</td>\n",
+       "      <td>30604979</td>\n",
+       "      <td>31661100</td>\n",
+       "      <td>32500331</td>\n",
+       "      <td>33179912</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>intersection</th>\n",
-       "      <td>6231513</td>\n",
-       "      <td>934331</td>\n",
-       "      <td>203945</td>\n",
-       "      <td>58753</td>\n",
-       "      <td>20652</td>\n",
-       "      <td>8653</td>\n",
-       "      <td>4184</td>\n",
-       "      <td>2136</td>\n",
-       "      <td>1199</td>\n",
-       "      <td>750</td>\n",
+       "      <td>10390000</td>\n",
+       "      <td>3610132</td>\n",
+       "      <td>1472699</td>\n",
+       "      <td>689702</td>\n",
+       "      <td>368965</td>\n",
+       "      <td>222294</td>\n",
+       "      <td>147830</td>\n",
+       "      <td>105687</td>\n",
+       "      <td>79518</td>\n",
+       "      <td>62336</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                    0     15000     30000     45000     60000     75000  \\\n",
-       "subsets                                                                   \n",
-       "0             6231513         0         0         0         0         0   \n",
-       "15000          934331   6235000         0         0         0         0   \n",
-       "30000          934635   1361964   6235000         0         0         0   \n",
-       "45000          934136   1334672   1443076   6235000         0         0   \n",
-       "60000          935738   1319284   1422122   1482332   6235000         0   \n",
-       "75000          935938   1309886   1411327   1482691   1557590   6235000   \n",
-       "90000          935435   1301764   1393776   1470041   1563114   1694687   \n",
-       "105000         935964   1289562   1374615   1454871   1553665   1705299   \n",
-       "120000         935214   1285137   1373694   1449043   1549421   1705556   \n",
-       "135000         936262   1278971   1367864   1444679   1543711   1703373   \n",
-       "union         6231513  11532182  15674528  18948045  21571716  23677569   \n",
-       "intersection  6231513    934331    203945     58753     20652      8653   \n",
+       "                     0     25000     50000     75000    100000    125000  \\\n",
+       "subsets                                                                    \n",
+       "0             10390000         0         0         0         0         0   \n",
+       "25000          3610132  10390000         0         0         0         0   \n",
+       "50000          3611833   3612359  10390000         0         0         0   \n",
+       "75000          3612357   3614205   3614788  10390000         0         0   \n",
+       "100000         3611305   3612124   3613877   3612142  10390000         0   \n",
+       "125000         3610229   3613180   3614462   3612966   3612012  10390000   \n",
+       "150000         3611754   3611665   3613436   3614450   3612829   3612276   \n",
+       "175000         3612816   3612504   3614904   3613760   3612312   3612053   \n",
+       "200000         3610674   3611587   3614444   3613300   3613230   3613403   \n",
+       "225000         3613278   3613972   3612920   3612784   3615772   3613176   \n",
+       "union         10390000  17169868  21808375  25085562  27471706  29250064   \n",
+       "intersection  10390000   3610132   1472699    689702    368965    222294   \n",
        "\n",
-       "                 90000    105000    120000    135000  \n",
+       "                150000    175000    200000    225000  \n",
        "subsets                                               \n",
        "0                    0         0         0         0  \n",
-       "15000                0         0         0         0  \n",
-       "30000                0         0         0         0  \n",
-       "45000                0         0         0         0  \n",
-       "60000                0         0         0         0  \n",
+       "25000                0         0         0         0  \n",
+       "50000                0         0         0         0  \n",
        "75000                0         0         0         0  \n",
-       "90000          6235000         0         0         0  \n",
-       "105000         1776576   6235000         0         0  \n",
-       "120000         1780921   1834384   6235000         0  \n",
-       "135000         1780215   1835966   1860195   6235000  \n",
-       "union         25355311  26706041  27806114  28723507  \n",
-       "intersection      4184      2136      1199       750  "
+       "100000               0         0         0         0  \n",
+       "125000               0         0         0         0  \n",
+       "150000        10390000         0         0         0  \n",
+       "175000         3611909  10390000         0         0  \n",
+       "200000         3613491   3611777  10390000         0  \n",
+       "225000         3615302   3613566   3613592  10390000  \n",
+       "union         30604979  31661100  32500331  33179912  \n",
+       "intersection    147830    105687     79518     62336  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "folder=\"subsets/fl_bert_25_06_2022_20:20:12/\"\n",
+    "folder=\"/home/sumbhati/ingenious/LM-pretraining/subsets/tfidf/\"\n",
     "df=analyse_subsets(folder)\n",
     "df.to_csv(folder+\"analysis.csv\")\n",
     "df"
