--- a/utils/collect_glue.ipynb
+++ b/utils/collect_glue.ipynb
@@ -50,55 +50,55 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>glue_run1</th>\n",
-       "      <td>54.69</td>\n",
-       "      <td>90.51</td>\n",
-       "      <td>89.91</td>\n",
-       "      <td>88.04</td>\n",
-       "      <td>87.69</td>\n",
-       "      <td>82.18</td>\n",
-       "      <td>82.70</td>\n",
-       "      <td>90.21</td>\n",
-       "      <td>67.50</td>\n",
-       "      <td>81.49</td>\n",
+       "      <td>50.39</td>\n",
+       "      <td>90.85</td>\n",
+       "      <td>89.38</td>\n",
+       "      <td>88.74</td>\n",
+       "      <td>87.54</td>\n",
+       "      <td>82.72</td>\n",
+       "      <td>83.04</td>\n",
+       "      <td>90.41</td>\n",
+       "      <td>66.56</td>\n",
+       "      <td>81.07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>glue_run2</th>\n",
-       "      <td>53.70</td>\n",
-       "      <td>90.96</td>\n",
-       "      <td>90.14</td>\n",
-       "      <td>88.26</td>\n",
-       "      <td>87.51</td>\n",
-       "      <td>81.81</td>\n",
-       "      <td>82.90</td>\n",
-       "      <td>90.01</td>\n",
-       "      <td>64.06</td>\n",
-       "      <td>81.04</td>\n",
+       "      <td>47.69</td>\n",
+       "      <td>91.52</td>\n",
+       "      <td>89.52</td>\n",
+       "      <td>88.46</td>\n",
+       "      <td>87.52</td>\n",
+       "      <td>82.55</td>\n",
+       "      <td>82.68</td>\n",
+       "      <td>90.82</td>\n",
+       "      <td>67.50</td>\n",
+       "      <td>80.92</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>glue_run3</th>\n",
-       "      <td>55.15</td>\n",
-       "      <td>91.07</td>\n",
-       "      <td>89.67</td>\n",
-       "      <td>88.08</td>\n",
-       "      <td>87.48</td>\n",
-       "      <td>82.28</td>\n",
-       "      <td>82.88</td>\n",
+       "      <td>50.64</td>\n",
+       "      <td>90.96</td>\n",
+       "      <td>89.78</td>\n",
+       "      <td>88.00</td>\n",
+       "      <td>84.83</td>\n",
+       "      <td>82.39</td>\n",
+       "      <td>83.07</td>\n",
        "      <td>90.19</td>\n",
-       "      <td>65.94</td>\n",
-       "      <td>81.42</td>\n",
+       "      <td>63.44</td>\n",
+       "      <td>80.37</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>average</th>\n",
-       "      <td>54.52</td>\n",
-       "      <td>90.85</td>\n",
-       "      <td>89.90</td>\n",
-       "      <td>88.13</td>\n",
-       "      <td>87.56</td>\n",
-       "      <td>82.09</td>\n",
-       "      <td>82.83</td>\n",
-       "      <td>90.13</td>\n",
+       "      <td>49.57</td>\n",
+       "      <td>91.11</td>\n",
+       "      <td>89.56</td>\n",
+       "      <td>88.40</td>\n",
+       "      <td>86.63</td>\n",
+       "      <td>82.55</td>\n",
+       "      <td>82.93</td>\n",
+       "      <td>90.47</td>\n",
        "      <td>65.83</td>\n",
-       "      <td>81.32</td>\n",
+       "      <td>80.78</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -106,16 +106,16 @@
       ],
       "text/plain": [
        "            cola   sst2   mrpc   stsb    qqp  mnli-m  mnli-mm   qnli    rte  \\\n",
-       "glue_run1  54.69  90.51  89.91  88.04  87.69   82.18    82.70  90.21  67.50   \n",
-       "glue_run2  53.70  90.96  90.14  88.26  87.51   81.81    82.90  90.01  64.06   \n",
-       "glue_run3  55.15  91.07  89.67  88.08  87.48   82.28    82.88  90.19  65.94   \n",
-       "average    54.52  90.85  89.90  88.13  87.56   82.09    82.83  90.13  65.83   \n",
+       "glue_run1  50.39  90.85  89.38  88.74  87.54   82.72    83.04  90.41  66.56   \n",
+       "glue_run2  47.69  91.52  89.52  88.46  87.52   82.55    82.68  90.82  67.50   \n",
+       "glue_run3  50.64  90.96  89.78  88.00  84.83   82.39    83.07  90.19  63.44   \n",
+       "average    49.57  91.11  89.56  88.40  86.63   82.55    82.93  90.47  65.83   \n",
        "\n",
        "           average  \n",
-       "glue_run1    81.49  \n",
-       "glue_run2    81.04  \n",
-       "glue_run3    81.42  \n",
-       "average      81.32  "
+       "glue_run1    81.07  \n",
+       "glue_run2    80.92  \n",
+       "glue_run3    80.37  \n",
+       "average      80.78  "
       ]
      },
      "execution_count": 2,
@@ -124,7 +124,7 @@
     }
    ],
    "source": [
-    "folder=\"/home/sumbhati/ingenious/LM-pretraining/models/fl_from_fl_19_07_2022_bert_20_07_2022_14:32:03/\"\n",
+    "folder=\"/home/sumbhati/ingenious/LM-pretraining/models/fl_bert_31_07_2022_10:27:29/\"\n",
     "tasks=[\"cola\", \"sst2\", \"mrpc\", \"stsb\", \"qqp\", \"mnli\", \"qnli\", \"rte\"]\n",
     "data=pd.DataFrame(columns=[\"cola\", \"sst2\", \"mrpc\", \"stsb\", \"qqp\", \"mnli-m\", \"mnli-mm\", \"qnli\", \"rte\"], index=['glue_run1', 'glue_run2', 'glue_run3'])\n",
     "for run in range(1,4):\n",
@@ -152,9 +152,6 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "13ad8c38ecb90713c33d78b40c599973b0f7cdda47714d00efe1ed11a1ec8108"
-  },
   "kernelspec": {
    "display_name": "Python 3.7.12 ('ingenious-env': venv)",
    "language": "python",
@@ -172,7 +169,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.7.12"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "c3f2c66fe79bcaa72eb3f732988cf6c70cb622bea7b3b0ccaf72fb1aa509e996"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
