--- a/utils/collect_glue.ipynb
+++ b/utils/collect_glue.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -50,55 +50,55 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>glue_run1</th>\n",
-       "      <td>50.39</td>\n",
-       "      <td>90.85</td>\n",
-       "      <td>89.38</td>\n",
-       "      <td>88.74</td>\n",
-       "      <td>87.54</td>\n",
-       "      <td>82.72</td>\n",
-       "      <td>83.04</td>\n",
-       "      <td>90.41</td>\n",
-       "      <td>66.56</td>\n",
-       "      <td>81.07</td>\n",
+       "      <td>50.97</td>\n",
+       "      <td>91.07</td>\n",
+       "      <td>90.79</td>\n",
+       "      <td>88.35</td>\n",
+       "      <td>87.40</td>\n",
+       "      <td>82.11</td>\n",
+       "      <td>83.03</td>\n",
+       "      <td>89.88</td>\n",
+       "      <td>65.00</td>\n",
+       "      <td>80.96</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>glue_run2</th>\n",
-       "      <td>47.69</td>\n",
+       "      <td>51.25</td>\n",
        "      <td>91.52</td>\n",
-       "      <td>89.52</td>\n",
-       "      <td>88.46</td>\n",
-       "      <td>87.52</td>\n",
-       "      <td>82.55</td>\n",
-       "      <td>82.68</td>\n",
-       "      <td>90.82</td>\n",
-       "      <td>67.50</td>\n",
-       "      <td>80.92</td>\n",
+       "      <td>90.08</td>\n",
+       "      <td>88.30</td>\n",
+       "      <td>87.60</td>\n",
+       "      <td>82.25</td>\n",
+       "      <td>83.17</td>\n",
+       "      <td>90.33</td>\n",
+       "      <td>67.81</td>\n",
+       "      <td>81.37</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>glue_run3</th>\n",
-       "      <td>50.64</td>\n",
-       "      <td>90.96</td>\n",
-       "      <td>89.78</td>\n",
-       "      <td>88.00</td>\n",
-       "      <td>84.83</td>\n",
-       "      <td>82.39</td>\n",
-       "      <td>83.07</td>\n",
-       "      <td>90.19</td>\n",
-       "      <td>63.44</td>\n",
-       "      <td>80.37</td>\n",
+       "      <td>51.01</td>\n",
+       "      <td>90.40</td>\n",
+       "      <td>90.20</td>\n",
+       "      <td>88.25</td>\n",
+       "      <td>87.62</td>\n",
+       "      <td>82.30</td>\n",
+       "      <td>82.95</td>\n",
+       "      <td>90.13</td>\n",
+       "      <td>64.06</td>\n",
+       "      <td>80.77</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>average</th>\n",
-       "      <td>49.57</td>\n",
-       "      <td>91.11</td>\n",
-       "      <td>89.56</td>\n",
-       "      <td>88.40</td>\n",
-       "      <td>86.63</td>\n",
-       "      <td>82.55</td>\n",
-       "      <td>82.93</td>\n",
-       "      <td>90.47</td>\n",
-       "      <td>65.83</td>\n",
-       "      <td>80.78</td>\n",
+       "      <td>51.08</td>\n",
+       "      <td>91.00</td>\n",
+       "      <td>90.36</td>\n",
+       "      <td>88.30</td>\n",
+       "      <td>87.54</td>\n",
+       "      <td>82.22</td>\n",
+       "      <td>83.05</td>\n",
+       "      <td>90.12</td>\n",
+       "      <td>65.62</td>\n",
+       "      <td>81.03</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -106,31 +106,31 @@
       ],
       "text/plain": [
        "            cola   sst2   mrpc   stsb    qqp  mnli-m  mnli-mm   qnli    rte  \\\n",
-       "glue_run1  50.39  90.85  89.38  88.74  87.54   82.72    83.04  90.41  66.56   \n",
-       "glue_run2  47.69  91.52  89.52  88.46  87.52   82.55    82.68  90.82  67.50   \n",
-       "glue_run3  50.64  90.96  89.78  88.00  84.83   82.39    83.07  90.19  63.44   \n",
-       "average    49.57  91.11  89.56  88.40  86.63   82.55    82.93  90.47  65.83   \n",
+       "glue_run1  50.97  91.07  90.79  88.35  87.40   82.11    83.03  89.88  65.00   \n",
+       "glue_run2  51.25  91.52  90.08  88.30  87.60   82.25    83.17  90.33  67.81   \n",
+       "glue_run3  51.01  90.40  90.20  88.25  87.62   82.30    82.95  90.13  64.06   \n",
+       "average    51.08  91.00  90.36  88.30  87.54   82.22    83.05  90.12  65.62   \n",
        "\n",
        "           average  \n",
-       "glue_run1    81.07  \n",
-       "glue_run2    80.92  \n",
-       "glue_run3    80.37  \n",
-       "average      80.78  "
+       "glue_run1    80.96  \n",
+       "glue_run2    81.37  \n",
+       "glue_run3    80.77  \n",
+       "average      81.03  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "folder=\"/home/sumbhati/ingenious/LM-pretraining/models/fl_bert_31_07_2022_10:27:29/\"\n",
+    "folder=\"/home/sumbhati/ingenious/LM-pretraining/models/fl_bert_30_08_2022_17:12:40/\"\n",
     "tasks=[\"cola\", \"sst2\", \"mrpc\", \"stsb\", \"qqp\", \"mnli\", \"qnli\", \"rte\"]\n",
     "data=pd.DataFrame(columns=[\"cola\", \"sst2\", \"mrpc\", \"stsb\", \"qqp\", \"mnli-m\", \"mnli-mm\", \"qnli\", \"rte\"], index=['glue_run1', 'glue_run2', 'glue_run3'])\n",
     "for run in range(1,4):\n",
     "    l=[]\n",
     "    for task in tasks:\n",
-    "        with open(folder+f\"glue_run{run}/\"+task+\".log\", \"r\") as f:\n",
+    "        with open(folder+f\"glue_run_{run}/\"+task+\".log\", \"r\") as f:\n",
     "            lines=f.readlines()\n",
     "            if task==\"mnli\":\n",
     "                l.append(100*float(lines[-2].split()[-1].rstrip().rstrip('}')))\n",
@@ -153,7 +153,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.12 ('ingenious-env': venv)",
+   "display_name": "Python 3.9.13 ('ingenious')",
    "language": "python",
    "name": "python3"
   },
@@ -167,12 +167,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "c3f2c66fe79bcaa72eb3f732988cf6c70cb622bea7b3b0ccaf72fb1aa509e996"
+    "hash": "330e453a0b5d4a31de1248b81498e4f7229811b6cdc584e51aea2376965a21af"
    }
   }
  },
