--- a/utils/collect_all_superglue.ipynb
+++ b/utils/collect_all_superglue.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,335 +14,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_path=\"/home/sumbhati/ingenious/LM-pretraining/models/regular_bert_13_06_2022_18:22:00/step_375000\"\n",
-    "data=pd.DataFrame(columns=[\"cb\", \"copa\", \"wsc\", \"boolq\", \"multirc\", \"wic\"], index=[f\"superglue_run_{i}\" for i in range(1, 21)])\n",
-    "task2metric={\"boolq\":\"acc\", \"cb\": \"avg_f1\", \"copa\":\"acc\", \"multirc\":\"f1\", \"record\":\"f1\", \"wic\": \"acc\", \"wsc\": \"acc\"}\n",
-    "for run in range(1, 21):\n",
-    "    if run>5:\n",
-    "        tasks=[\"cb\", \"copa\", \"wsc\"]\n",
-    "    else:\n",
-    "        tasks=[\"cb\", \"copa\", \"wsc\", \"boolq\", \"multirc\", \"wic\"]\n",
-    "    l=[]\n",
-    "    for task in tasks:\n",
-    "        with open(f\"{model_path}/superglue_run_{run}/runs/{task}/val_metrics.json\") as f:\n",
-    "            d=json.load(f)\n",
-    "            score=d[task][\"metrics\"][\"minor\"][task2metric[task]]\n",
-    "            l.append(round(100.0*float(score), 2))\n",
-    "    if run>5:\n",
-    "        l.extend([np.nan]*3)\n",
-    "    data.loc[f\"superglue_run_{run}\"]=l\n",
-    "data.loc[\"average\"]=data.mean(axis=0, skipna=True)\n",
-    "data.loc[\"stddev\"]=data.std(axis=0, skipna=True)\n",
-    "data.loc[\"decrement_avg\"]=[np.nan for i in range(6)]\n",
-    "data.loc[\"maximum\"]=data.max(axis=0, skipna=True)\n",
-    "data.loc[\"decrement_max\"]=[np.nan for i in range(6)]\n",
-    "data.to_csv(f\"{model_path}/superglue_results.csv\")"
+    "main_model_dir=\"/home/hrenduchinta/LM-pretraining/models/fl_bert_07_10_2022_05:55:01\"\n",
+    "for step in range(50000, 300000, 50000):\n",
+    "    model_path=f\"{main_model_dir}/step_{step}\"\n",
+    "    try:\n",
+    "        data=pd.DataFrame(columns=[\"cb\", \"copa\", \"wsc\", \"boolq\", \"multirc\", \"wic\"], index=[f\"superglue_run_{i}\" for i in range(1, 21)])\n",
+    "        task2metric={\"boolq\":\"acc\", \"cb\": \"avg_f1\", \"copa\":\"acc\", \"multirc\":\"f1\", \"record\":\"f1\", \"wic\": \"acc\", \"wsc\": \"acc\"}\n",
+    "        for run in range(1, 21):\n",
+    "            if run>5:\n",
+    "                tasks=[\"cb\", \"copa\", \"wsc\"]\n",
+    "            else:\n",
+    "                tasks=[\"cb\", \"copa\", \"wsc\", \"boolq\", \"multirc\", \"wic\"]\n",
+    "            l=[]\n",
+    "            for task in tasks:\n",
+    "                with open(f\"{model_path}/superglue_run_{run}/runs/{task}/val_metrics.json\") as f:\n",
+    "                    d=json.load(f)\n",
+    "                    score=d[task][\"metrics\"][\"minor\"][task2metric[task]]\n",
+    "                    l.append(round(100.0*float(score), 2))\n",
+    "            if run>5:\n",
+    "                l.extend([np.nan]*3)\n",
+    "            data.loc[f\"superglue_run_{run}\"]=l\n",
+    "        data.loc[\"average\"]=data.mean(axis=0, skipna=True)\n",
+    "        data.loc[\"stddev\"]=data.std(axis=0, skipna=True)\n",
+    "        data.loc[\"decrement_avg\"]=[np.nan for i in range(6)]\n",
+    "        data.loc[\"maximum\"]=data.max(axis=0, skipna=True)\n",
+    "        data.loc[\"decrement_max\"]=[np.nan for i in range(6)]\n",
+    "        data.to_csv(f\"{model_path}/superglue_results.csv\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"step-{step}: {str(e)}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "main_model_dir=\"/home/hrenduchinta/LM-pretraining/models/fl_without_warmstart_bert_11_06_2022_17:53:56\"\n",
+    "for step in range(50000, 300000, 50000):\n",
+    "    for run in range(1, 21):\n",
+    "        if run>5:\n",
+    "            tasks=[\"cb\", \"copa\", \"wsc\"]\n",
+    "        else:\n",
+    "            tasks=[\"cb\", \"copa\", \"wsc\", \"boolq\", \"multirc\", \"wic\"]\n",
+    "        for task in tasks:\n",
+    "            if not os.path.isfile(f\"{main_model_dir}/step_{step}/superglue_run_{run}/runs/{task}/val_metrics.json\"):\n",
+    "                print(step, run, task)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "from statistics import mean, stdev"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l=[]\n",
+    "for i in range(1,21):\n",
+    "    with open(f\"/home/hrenduchinta/LM-pretraining/models/regular_bert/test_superglue_run_{i}/runs/cb/val_metrics.json\", \"r\") as f:\n",
+    "        d=json.load(f)\n",
+    "        l.append(100*d[\"cb\"][\"metrics\"][\"minor\"][\"avg_f1\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>cb</th>\n",
-       "      <th>copa</th>\n",
-       "      <th>wsc</th>\n",
-       "      <th>boolq</th>\n",
-       "      <th>multirc</th>\n",
-       "      <th>wic</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>superglue_run_1</th>\n",
-       "      <td>76.55</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>58.65</td>\n",
-       "      <td>73.88</td>\n",
-       "      <td>61.6</td>\n",
-       "      <td>68.34</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>superglue_run_2</th>\n",
-       "      <td>77.83</td>\n",
-       "      <td>61.0</td>\n",
-       "      <td>61.54</td>\n",
-       "      <td>73.12</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>68.65</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>superglue_run_3</th>\n",
-       "      <td>65.09</td>\n",
-       "      <td>62.0</td>\n",
-       "      <td>65.38</td>\n",
-       "      <td>69.72</td>\n",
-       "      <td>61.98</td>\n",
-       "      <td>66.77</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>superglue_run_4</th>\n",
-       "      <td>72.28</td>\n",
-       "      <td>61.0</td>\n",
-       "      <td>63.46</td>\n",
-       "      <td>73.94</td>\n",
-       "      <td>59.53</td>\n",
-       "      <td>68.18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>superglue_run_5</th>\n",
-       "      <td>72.09</td>\n",
-       "      <td>58.0</td>\n",
-       "      <td>55.77</td>\n",
-       "      <td>73.85</td>\n",
-       "      <td>62.46</td>\n",
-       "      <td>68.34</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>superglue_run_6</th>\n",
-       "      <td>72.17</td>\n",
-       "      <td>66.0</td>\n",
-       "      <td>61.54</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>superglue_run_7</th>\n",
-       "      <td>73.51</td>\n",
-       "      <td>65.0</td>\n",
-       "      <td>62.5</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>superglue_run_8</th>\n",
-       "      <td>84.19</td>\n",
-       "      <td>59.0</td>\n",
-       "      <td>63.46</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>superglue_run_9</th>\n",
-       "      <td>76.18</td>\n",
-       "      <td>61.0</td>\n",
-       "      <td>59.62</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>superglue_run_10</th>\n",
-       "      <td>67.74</td>\n",
-       "      <td>73.0</td>\n",
-       "      <td>57.69</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>superglue_run_11</th>\n",
-       "      <td>70.84</td>\n",
-       "      <td>57.0</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>superglue_run_12</th>\n",
-       "      <td>70.44</td>\n",
-       "      <td>66.0</td>\n",
-       "      <td>61.54</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>superglue_run_13</th>\n",
-       "      <td>72.45</td>\n",
-       "      <td>66.0</td>\n",
-       "      <td>48.08</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>superglue_run_14</th>\n",
-       "      <td>77.43</td>\n",
-       "      <td>61.0</td>\n",
-       "      <td>56.73</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>superglue_run_15</th>\n",
-       "      <td>69.51</td>\n",
-       "      <td>65.0</td>\n",
-       "      <td>63.46</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>superglue_run_16</th>\n",
-       "      <td>69.05</td>\n",
-       "      <td>57.0</td>\n",
-       "      <td>63.46</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>superglue_run_17</th>\n",
-       "      <td>72.45</td>\n",
-       "      <td>65.0</td>\n",
-       "      <td>58.65</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>superglue_run_18</th>\n",
-       "      <td>78.77</td>\n",
-       "      <td>62.0</td>\n",
-       "      <td>58.65</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>superglue_run_19</th>\n",
-       "      <td>69.92</td>\n",
-       "      <td>59.0</td>\n",
-       "      <td>59.62</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>superglue_run_20</th>\n",
-       "      <td>81.58</td>\n",
-       "      <td>63.0</td>\n",
-       "      <td>44.23</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>average</th>\n",
-       "      <td>73.5035</td>\n",
-       "      <td>62.35</td>\n",
-       "      <td>58.7015</td>\n",
-       "      <td>72.902</td>\n",
-       "      <td>49.114</td>\n",
-       "      <td>68.056</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>stddev</th>\n",
-       "      <td>4.660194</td>\n",
-       "      <td>3.785168</td>\n",
-       "      <td>5.417246</td>\n",
-       "      <td>1.618968</td>\n",
-       "      <td>24.577339</td>\n",
-       "      <td>0.660806</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>decrement_avg</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>maximum</th>\n",
-       "      <td>84.19</td>\n",
-       "      <td>73.0</td>\n",
-       "      <td>65.38</td>\n",
-       "      <td>73.94</td>\n",
-       "      <td>62.46</td>\n",
-       "      <td>68.65</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>decrement_max</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                        cb      copa       wsc     boolq    multirc       wic\n",
-       "superglue_run_1      76.55      60.0     58.65     73.88       61.6     68.34\n",
-       "superglue_run_2      77.83      61.0     61.54     73.12        0.0     68.65\n",
-       "superglue_run_3      65.09      62.0     65.38     69.72      61.98     66.77\n",
-       "superglue_run_4      72.28      61.0     63.46     73.94      59.53     68.18\n",
-       "superglue_run_5      72.09      58.0     55.77     73.85      62.46     68.34\n",
-       "superglue_run_6      72.17      66.0     61.54       NaN        NaN       NaN\n",
-       "superglue_run_7      73.51      65.0      62.5       NaN        NaN       NaN\n",
-       "superglue_run_8      84.19      59.0     63.46       NaN        NaN       NaN\n",
-       "superglue_run_9      76.18      61.0     59.62       NaN        NaN       NaN\n",
-       "superglue_run_10     67.74      73.0     57.69       NaN        NaN       NaN\n",
-       "superglue_run_11     70.84      57.0      50.0       NaN        NaN       NaN\n",
-       "superglue_run_12     70.44      66.0     61.54       NaN        NaN       NaN\n",
-       "superglue_run_13     72.45      66.0     48.08       NaN        NaN       NaN\n",
-       "superglue_run_14     77.43      61.0     56.73       NaN        NaN       NaN\n",
-       "superglue_run_15     69.51      65.0     63.46       NaN        NaN       NaN\n",
-       "superglue_run_16     69.05      57.0     63.46       NaN        NaN       NaN\n",
-       "superglue_run_17     72.45      65.0     58.65       NaN        NaN       NaN\n",
-       "superglue_run_18     78.77      62.0     58.65       NaN        NaN       NaN\n",
-       "superglue_run_19     69.92      59.0     59.62       NaN        NaN       NaN\n",
-       "superglue_run_20     81.58      63.0     44.23       NaN        NaN       NaN\n",
-       "average            73.5035     62.35   58.7015    72.902     49.114    68.056\n",
-       "stddev            4.660194  3.785168  5.417246  1.618968  24.577339  0.660806\n",
-       "decrement_avg          NaN       NaN       NaN       NaN        NaN       NaN\n",
-       "maximum              84.19      73.0     65.38     73.94      62.46     68.65\n",
-       "decrement_max          NaN       NaN       NaN       NaN        NaN       NaN"
+       "(74.88759057452789, 2.4532846869924643)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data"
+    "mean(l), stdev(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l=[]\n",
+    "for i in range(1,6):\n",
+    "    with open(f\"/home/hrenduchinta/LM-pretraining/models/regular_bert/test_superglue_run_{i}/runs/copa/val_metrics.json\", \"r\") as f:\n",
+    "        d=json.load(f)\n",
+    "        l.append(100*d[\"copa\"][\"metrics\"][\"minor\"][\"acc\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(67.8, 3.3466401061363023)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean(l), stdev(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[70.0, 62.0, 68.0, 70.0, 69.0]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l"
    ]
   },
   {
@@ -374,7 +191,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "c3f2c66fe79bcaa72eb3f732988cf6c70cb622bea7b3b0ccaf72fb1aa509e996"
+    "hash": "13ad8c38ecb90713c33d78b40c599973b0f7cdda47714d00efe1ed11a1ec8108"
    }
   }
  },
