--- a/utils/collect_all_glue.ipynb
+++ b/utils/collect_all_glue.ipynb
@@ -13,20 +13,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "step-200000: [Errno 2] No such file or directory: '/home/hrenduchinta/LM-pretraining/models/fl_bert_07_10_2022_05:55:01/step_200000/glue_run_5/stsb.log'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "main_model_dir=\"/home/hrenduchinta/LM-pretraining/models/fl_bert_07_10_2022_05:55:01\"\n",
-    "for step in range(50000, 300000, 50000):\n",
+    "main_model_dir=\"/home/hrenduchinta/LM-pretraining/models/fl_bert_23_11_2022_06:34:28\"\n",
+    "for step in range(50000, 550000, 50000):\n",
     "    model_path=f\"{main_model_dir}/step_{step}\"\n",
     "    try:\n",
     "        data=pd.DataFrame(columns=[\"cola\", \"mrpc\", \"rte\", \"stsb\", \"sst2\", \"mnli-m\", \"mnli-mm\", \"qnli\", \"qqp\"], index=[f\"glue_run_{i}\" for i in range(1, 21)])\n",
@@ -57,49 +49,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "200000 16 mrpc\n",
-      "200000 16 rte\n",
-      "200000 16 stsb\n",
-      "200000 17 cola\n",
-      "200000 17 mrpc\n",
-      "200000 17 rte\n",
-      "200000 17 stsb\n",
-      "200000 18 cola\n",
-      "200000 18 mrpc\n",
-      "200000 18 rte\n",
-      "200000 18 stsb\n",
-      "200000 19 cola\n",
-      "200000 19 mrpc\n",
-      "200000 19 rte\n",
-      "200000 19 stsb\n",
-      "200000 20 cola\n",
-      "200000 20 mrpc\n",
-      "200000 20 rte\n",
-      "200000 20 stsb\n",
-      "250000 2 mnli\n",
-      "250000 2 qqp\n",
-      "250000 3 mnli\n",
-      "250000 3 qnli\n",
-      "250000 3 qqp\n",
-      "250000 4 mnli\n",
-      "250000 4 qnli\n",
-      "250000 4 qqp\n",
-      "250000 5 mnli\n",
-      "250000 5 qnli\n",
-      "250000 5 qqp\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "main_model_dir=\"/home/hrenduchinta/LM-pretraining/models/fl_bert_27_08_2022_09:40:58\"\n",
-    "for step in range(50000, 300000, 50000):\n",
+    "main_model_dir=\"/home/hrenduchinta/LM-pretraining/models/fl_bert_23_11_2022_06:34:28\"\n",
+    "for step in range(50000, 550000, 50000):\n",
     "    for run in range(1, 21):\n",
     "        if run>5:\n",
     "            tasks=[\"cola\", \"mrpc\", \"rte\", \"stsb\"]\n",
@@ -112,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +178,7 @@
     }
    ],
    "source": [
-    "model_path=f\"/home/hrenduchinta/LM-pretraining/models/fl_without_warmstart_bert_11_06_2022_17:53:56/step_150000\"\n",
+    "model_path=f\"/home/hrenduchinta/LM-pretraining/models/fl_bert_23_11_2022_06:34:28/step_250000\"\n",
     "data=pd.DataFrame(columns=[\"cola\", \"mrpc\", \"rte\", \"stsb\", \"sst2\", \"mnli-m\", \"mnli-mm\", \"qnli\", \"qqp\"], index=[f\"glue_run_{i}\" for i in range(1, 21)])\n",
     "for run in range(1, 21):\n",
     "    if run>5:\n",
@@ -259,7 +214,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.12 ('ingenious-env': venv)",
+   "display_name": "Python 3.9.13 ('ingenious')",
    "language": "python",
    "name": "python3"
   },
@@ -273,12 +228,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "13ad8c38ecb90713c33d78b40c599973b0f7cdda47714d00efe1ed11a1ec8108"
+    "hash": "330e453a0b5d4a31de1248b81498e4f7229811b6cdc584e51aea2376965a21af"
    }
   }
  },
