--- a/utils/collect_all_glue.ipynb
+++ b/utils/collect_all_glue.ipynb
@@ -13,11 +13,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "main_model_dir=\"/home/hrenduchinta/LM-pretraining/models/fl_bert_23_11_2022_06:34:28\"\n",
+    "main_model_dir=\"/home/hrenduchinta/LM-pretraining/models/fl_bert_03_12_2022_18:32:31\"\n",
     "for step in range(50000, 550000, 50000):\n",
     "    model_path=f\"{main_model_dir}/step_{step}\"\n",
     "    try:\n",
@@ -49,11 +49,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "main_model_dir=\"/home/hrenduchinta/LM-pretraining/models/fl_bert_23_11_2022_06:34:28\"\n",
+    "main_model_dir=\"/home/hrenduchinta/LM-pretraining/models/fl_bert_03_12_2022_18:32:31\"\n",
     "for step in range(50000, 550000, 50000):\n",
     "    for run in range(1, 21):\n",
     "        if run>5:\n",
@@ -214,7 +214,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('ingenious')",
+   "display_name": "Python 3.7.12 ('ingenious-env': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -228,12 +228,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.7.12 | packaged by conda-forge | (default, Oct 26 2021, 06:08:53) \n[GCC 9.4.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "330e453a0b5d4a31de1248b81498e4f7229811b6cdc584e51aea2376965a21af"
+    "hash": "13ad8c38ecb90713c33d78b40c599973b0f7cdda47714d00efe1ed11a1ec8108"
    }
   }
  },
